Outliner->BlenderFile->Delete not working on some objects #69176

Closed
opened 2019-08-26 16:52:54 +02:00 by Konstantins Visnevskis · 7 comments

win7x64, gtx580
Blender Version
Broken: 2.8
Worked: 2.79

Short description of error
Some time ago, there was a Delete operator introduced to Outliner's Blender File view to "force delete" objects/data that are still linked outside of user's reach (to each other etc.).
It seems it doesn't always work now.

Exact steps for others to reproduce the error

  • Expand Outliner->Objects,
  • context-menu ->Delete
    Usually the object disappears immediately.
    If it had selection disabled before scene deletion, it may do not display any effect and disappear after re-save.
    But some, like these, remain regardless.
    delete.blend
win7x64, gtx580 **Blender Version** Broken: 2.8 Worked: 2.79 **Short description of error** Some time ago, there was a Delete operator introduced to Outliner's Blender File view to "force delete" objects/data that are still linked outside of user's reach (to each other etc.). It seems it doesn't always work now. **Exact steps for others to reproduce the error** - Expand Outliner->Objects, - context-menu ->Delete Usually the object disappears immediately. If it had selection disabled before scene deletion, it may do not display any effect and disappear after re-save. But some, like these, remain regardless. [delete.blend](https://archive.blender.org/developer/F7704736/delete.blend)

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Can confirm for this particular file.
Not sure why this object still has a user, at least this is not a scene, think this is why Delete fails (@mont29: correct me if I'm wrong).
Now I think the question is: how did we get here?

@KonstantinsVisnevskis: any idea how we got into this situation? (e.g. deleting scenes the objects were part of or something similar)

if you are just looking for a way to get rid of these objects you can use python:

bpy.data.objects['col'].user_clear()
bpy.data.objects['arm'].user_clear()

Unless this doesnt ring a bell for @mont29 immediately, I guess we have to find a way to reproduce how to get into a situation like this (object still having a user), otherwise not sure what should really be fixed here...

Can confirm for this particular file. Not sure why this object still has a user, at least this is not a scene, think this is why `Delete` fails (@mont29: correct me if I'm wrong). Now I think the question is: how did we get here? @KonstantinsVisnevskis: any idea how we got into this situation? (e.g. deleting scenes the objects were part of or something similar) if you are just looking for a way to get rid of these objects you can use python: ``` bpy.data.objects['col'].user_clear() bpy.data.objects['arm'].user_clear() ``` Unless this doesnt ring a bell for @mont29 immediately, I guess we have to find a way to reproduce how to get into a situation like this (object still having a user), otherwise not sure what should really be fixed here...

I'll try to replicate it, but afaik the 'Delete' command was added in 'Blender File' view for cases like this - to force-remove the data if something goes wrong and it is considered used by something.

I'll try to replicate it, but afaik the 'Delete' command was added in 'Blender File' view for cases like this - to force-remove the data if something goes wrong and it is considered used by something.

This issue was referenced by 9bda62c136

This issue was referenced by 9bda62c136a5a2b799c43afefdf13c5f63e2e1e7
Bastien Montagne self-assigned this 2019-08-27 19:43:57 +02:00

Issue here is that those objects are not referenced in any scene any more, only by some custom properties of the scene... Fix incoming.

Issue here is that those objects are not referenced in any scene any more, only by some custom properties of the scene... Fix incoming.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69176
No description provided.